<resources>
    <string name="app_name">People-list-devspark</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="inbox_string">Account</string>
    <string name="starred_string">Favourites</string>
    <string name="sent_mail_string">Send</string>
    <string name="draft_string">Drafts</string>
    <string name="all_mail_string">All emails</string>
    <string name="trash_string">Trash</string>
    <string name="spam_string">Spam</string>
    <string name="openDrawer">Navigation view</string>
    <string name="closeDrawer">Navigation view closed</string>
    <string name="user_name">Lisandro Falconi</string>
    <string name="user_email">lisandrofalconi@gmail.com</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Searching</string>
    <string name="name_hint">Name</string>
    <string name="phone_hint">Phone</string>
    <string name="email_hint">Email</string>
    <string name="address_hint">Address</string>
    <string name="dob_hint">Date of birth</string>
    <string name="save_text">Save</string>
    <string name="cancel_text">Cancel</string>

</resources>
