<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lopez.espada.falconi.people_list_devspark.NewEditPerson"
    android:weightSum="1">

    <include
        android:id="@+id/toolbar"
        layout="@layout/tool_bar2"/>

    <ImageView
        android:layout_width="match_parent"
        android:id="@+id/imageView"
        android:layout_height="146dp"
        android:layout_weight="0.12" />

    <Button
        android:id="@+id/imagePickerButton"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/pick_image_text" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <EditText
                android:id="@+id/person_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:ems="10"
                android:hint="@string/name_hint"
                android:inputType="textPersonName" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/person_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="81.54"
                    android:ems="10"
                    android:hint="@string/phone_hint"
                    android:inputType="phone" />

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="40dp"
                    android:layout_height="35dp"
                    android:onClick="callContact"
                    android:src="@android:drawable/sym_action_call" />

                <ImageButton
                    android:id="@+id/imageButton2"
                    android:layout_width="42dp"
                    android:layout_height="35dp"
                    android:onClick="sendSMS"
                    android:src="@android:drawable/ic_dialog_email" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/person_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress" />

                <ImageButton
                    android:id="@+id/imageButton3"
                    android:layout_width="42dp"
                    android:layout_height="35dp"
                    android:onClick="sendEmail"
                    android:src="@android:drawable/ic_dialog_email" />
            </LinearLayout>

            <EditText
                android:id="@+id/person_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/address_hint"
                android:inputType="textPostalAddress" />

            <EditText
                android:id="@+id/person_dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/dob_hint" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/save_button"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save_text" />

                <Button
                    android:id="@+id/cancel_button"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel_text" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</LinearLayout>